--- a/style.css
+++ b/style.css
@@ -1,31 +1,11 @@
-body{
-    margin: 0;
-    padding: 0;
-  
-    font-family: Arial;
+.first-title{
+    padding-left: 2%;
 }
-.navbar ul{
-    list-style: none;
-    background: gray;
-    padding: 0;
-    margin: 0;
-    text-align: center;
+.second-title{
+    padding-left: 2%;
+    padding-top: 2%;
 }
-.navbar li{
-    display: inline-block;
-}
-.navbar a{
-   text-decoration: none; 
-   color: #fff;
-   width: 100px;
-   display: block;
-   padding: 25px 20px;
-   font-size: 15px;
-   text-transform: uppercase;
-   font-weight: bold;
-   text-align: center;
-}
-/* navbar ended */
+
 
 .Random-quotes-container{
   
