--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
+
+.first-task{
+    width: 90px;
+    height: 90px;
+    position: absolute;
+    left: 27%;
+    margin-left: -50px;
+    top: 10%;
+    margin-top: -50px;
+}
 .first-title{
-    padding-left: 2%;
+    padding-left: 345px;
 }
-.second-title{
-    padding-left: 2%;
-    padding-top: 2%;
-}
+
 
 
 .Random-quotes-container{
@@ -39,4 +46,55 @@
     width: 25px;
     background-color: yellow ;
 }
+
+/* task 1 ended  */
+
+/* task 2 starts */
+ /* task 2 css */
+
+ .second-task{
+    width: 90px;
+    height: 90px;
+    position: absolute;
+    left: 10%;
+    margin-left: -50px;
+    top: 50%;
+    margin-top: -50px;
+}
+.second-title{
+    padding-left: 570px;
+}
+.hero-converter-container{
+    margin: 250px;
+    margin-top: 10%;
+}
+
+
+
+ .hero-converter{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    background-color: orange;
+    width: 800px;
+    border: 3px solid black;
+    padding: 20px;
+    margin: 10px;
+}
+
+ .component{
+    margin-left: 7px;
+    margin-right: 7px;
+}
+
+/* task 2 css ended  */
+
+ 
+
+
+
+
+
 
